--- a/ChatClient/Views/AdditionalViews/ConnectionLostView.xaml
+++ b/ChatClient/Views/AdditionalViews/ConnectionLostView.xaml
@@ -3,22 +3,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views"
+             xmlns:local="clr-namespace:ChatClient.Views" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Style="{StaticResource connectionLost}">
-        <StackPanel Orientation="Vertical" 
+        <Border Style="{StaticResource formBorder}"
+                Width="Auto"
+                Height="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.3*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="Connection Lost"
+                   Foreground="DarkRed"
+                   FontSize="28"
+                   Grid.Row="0"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
+                <StackPanel Orientation="Vertical" 
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <TextBlock Text="Connection Lost"
-                   Foreground="Yellow"
-                   FontSize="28"/>
-            <Button Width="120" 
-                    Height ="40" 
+                    VerticalAlignment="Top"
+                    Grid.Row="1">
+                    <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Margin="5,5,5,20">
+                        <TextBlock Text="Connection status: "
+                           FontSize="24"/>
+                        <TextBlock Text="{Binding ConnectionStatusValue}"
+                       FontSize="20"
+                           Margin="5"
+                                   Foreground="Blue"/>
+                    </StackPanel>
+                    <Button Style="{StaticResource reconnectionButton}"
                     Content="Reconnect"
-                    FontSize="24"
-                    Margin="20"/>
-        </StackPanel>
-        
+                            Command="{Binding ReconnectionCommand}">
+                    </Button>
+                </StackPanel>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
