--- a/ChatClient/Views/AdditionalViews/ConnectionLostView.xaml
+++ b/ChatClient/Views/AdditionalViews/ConnectionLostView.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
+             xmlns:local="clr-namespace:ChatClient.Views" 
+             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Style="{StaticResource connectionLost}">
+
+        <Grid Style="{StaticResource connectionLost}">
         <Border Style="{StaticResource formBorder}"
                 Width="Auto"
                 Height="Auto">
