--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -15,7 +15,7 @@
         <GradientStop Color="#E6E7FF" Offset="1"/>
     </LinearGradientBrush>
 
-    <Style x:Key="activeUsers" x:Name="usersListBox" TargetType="{x:Type ListBox}">
+    <Style x:Key="usersBox" x:Name="usersListBox" TargetType="{x:Type ListBox}">
         <Setter Property="ItemsSource" Value="{Binding ActiveUsers}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -75,7 +75,35 @@
         </Setter>
     </Style>
 
-    <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource activeUsers}">
+    <Style x:Key="activeUsers" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersBox}">
+        <Setter Property="ItemContainerStyle">
+            <Setter.Value>
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu ItemsSource="{Binding ContextMenuActions}">
+                                <ContextMenu.ItemContainerStyle>
+                                    <Style TargetType="{x:Type MenuItem}">
+                                        <Setter Property="Command" Value="{Binding Command}"/>
+                                        <Setter Property="CommandParameter" 
+                                    Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}}, Path=PlacementTarget.SelectedItem}"/>
+                                    </Style>
+                                </ContextMenu.ItemContainerStyle>
+                                <ContextMenu.ItemTemplate>
+                                    <HierarchicalDataTemplate DataType="{x:Type local:UserContextMenu}" 
+                                                  ItemsSource="{Binding MenuItems}">
+                                        <TextBlock Text="{Binding Header}"/>
+                                    </HierarchicalDataTemplate>
+                                </ContextMenu.ItemTemplate>
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersBox}">
         <Setter Property="ItemsSource" Value="{Binding Messages}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
         <Setter Property="ItemTemplate">
