--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:ChatClient.Views" 
              xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
              xmlns:additionaViews="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="550">
@@ -14,6 +15,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition/>
+            <ColumnDefinition Width="58"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0"> 
@@ -48,24 +50,57 @@
             </Grid>
         </Grid>
 
-        <Grid  Grid.Column="2">
+        <Border  Grid.Column="1" 
+                 BorderThickness="1,0,1,0"
+                 BorderBrush="#AAAEB2">
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="35"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Border Style="{StaticResource chatBorder}"
+                    Grid.Row="0">
+                    <TextBlock Style="{StaticResource chatTitle}"
+                           Text="Users"/>
+                </Border>
+
+                <ListBox Grid.Row="1"
+                     Style="{StaticResource activeUsers}"/>
+            </Grid>
+        </Border>
+
+        <Grid Grid.ColumnSpan="3" Style="{StaticResource getBannedLayout}"/>
+        <additionaViews:ConnectionLostView Grid.ColumnSpan="2"/>
+
+
+        <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-
-            <Border Style="{StaticResource chatBorder}"
-                    Grid.Row="0">
-                <TextBlock Style="{StaticResource chatTitle}"
-                           Text="Users"/>
-            </Border>
-
-            <ListBox Grid.Row="1"
-                     Style="{StaticResource activeUsers}"/>
+            <ToolBarTray Grid.Column="2" Grid.Row="1" 
+                     Orientation="Vertical"
+                         IsLocked="True"
+                         Background="{StaticResource mainMessageBoxColors}">
+                <ToolBar FontSize="20" 
+                         ToolBar.OverflowMode="Never"
+                         Name="toolBar">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Loaded">
+                            <i:InvokeCommandAction Command="{Binding RemoveToolBarOverflowCommand}"
+                                                   CommandParameter="{Binding ElementName=toolBar}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                    <Button Style="{StaticResource toolBarButton}" 
+                            Content="Ban"/>
+                    <Button Style="{StaticResource toolBarButton}"
+                            Content="Kick"/>
+                    <Button Style="{StaticResource toolBarButton}"
+                            Content="Mute"/>
+                </ToolBar>
+            </ToolBarTray>
         </Grid>
-
-        <Grid Grid.ColumnSpan="3" Style="{StaticResource getBannedLayout}"/>
-        <additionaViews:ConnectionLostView Grid.ColumnSpan="2"/>
     </Grid>
 
 </UserControl>
