ToolBar appearence was changed

--- a/ChatClient/Resources/Button.xaml
+++ b/ChatClient/Resources/Button.xaml
@@ -179,13 +179,27 @@
                             BorderBrush="#525251"
                             Padding="1"
                             HorizontalAlignment="Stretch"
-                            Background="#E0CD8E"
+                            Name="toolBarBorder"
+                            Background="{StaticResource registrationBasicColors}"
                             Margin="0,2,0,2">
-                        <Button BorderThickness="0" 
+                        <!--<Button BorderThickness="0" 
                                 Content="{TemplateBinding Content}"
                                 Background="Transparent"
-                                FontWeight="DemiBold"/>
+                                FontWeight="DemiBold"/>-->
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"/>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="toolBarBorder" Property="Background" Value="{StaticResource registrationMouseOverColors}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="toolBarBorder" Property="Background" Value="{StaticResource registrationIsDisabledColors}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="toolBarBorder" Property="Background" Value="{StaticResource registrationIsPressedColors}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
