--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition  Style="{StaticResource toolBarColumn}"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0"> 
+        <Grid Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="35"/>
                 <RowDefinition Height="4*"/>
@@ -65,14 +65,12 @@
                            Text="Users"/>
                 </Border>
 
-                <ListBox Grid.Row="1"
+                <ListBox Grid.Row="1" x:Name="activeUsersListBox"
                      Style="{StaticResource activeUsers}"/>
             </Grid>
         </Border>
 
         <Grid Grid.ColumnSpan="3" Style="{StaticResource getBannedLayout}"/>
-        <additionaViews:ConnectionLostView Grid.ColumnSpan="2"/>
-
 
         <Grid Grid.Column="2" >
             <Grid.RowDefinitions>
@@ -95,12 +93,15 @@
                     <Button Style="{StaticResource toolBarButton}" 
                             Content="Ban"/>
                     <Button Style="{StaticResource toolBarButton}"
-                            Content="Kick"/>
+                            Content="Kick"
+                            Command="{Binding KickUserCommand}"
+                            CommandParameter="{Binding ElementName=activeUsersListBox,Path=SelectedItem}"/>
                     <Button Style="{StaticResource toolBarButton}"
                             Content="Mute"/>
                 </ToolBar>
             </ToolBarTray>
         </Grid>
-    </Grid>
 
+        <additionaViews:ConnectionLostView Grid.ColumnSpan="3"/>
+    </Grid>
 </UserControl>
