--- a/ChatClient/App.xaml
+++ b/ChatClient/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Resources/Border.xaml"/>
                 <ResourceDictionary Source="Resources/PasswordBox.xaml"/>
                 <ResourceDictionary Source="Resources/ContentControl.xaml"/>
+                <ResourceDictionary Source="Resources/Menu.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
