--- a/ChatClient/Views/ChatView.xaml
+++ b/ChatClient/Views/ChatView.xaml
@@ -48,13 +48,13 @@
                   Background="{StaticResource typeMessageGridColors}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3.7*"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition MinWidth="60" MaxWidth="60"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBox Grid.Column="0"    
                      Style="{StaticResource typeMessage}"
                      Text="{Binding Message}"/>
-                <Button Margin="0,0,10,0" Grid.Column="1" Width="50" Height="45"  
+                <Button  Margin="0,0,10,0" Grid.Column="1" Width="50" Height="45"  
                         Command="{Binding SendChatMessageCommand}"
                         Style="{StaticResource sendImageMessage}">
                     <Image Stretch="Fill" Source="{StaticResource directDrawingImage}" />
