--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -60,12 +60,30 @@
         </Setter>
     </Style>
 
-    <Style x:Key="typeMessage" TargetType="{x:Type TextBox}" BasedOn="{StaticResource enterField}">
+    <Style x:Key="typeMessage" TargetType="{x:Type TextBox}" >
+        <Setter Property="FontSize" Value="21"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Width" Value="Auto"/>
         <Setter Property="Height" Value="Auto"/>
         <Setter Property="Background" Value="#F9F9F9"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="5">
+                        <TextBox Margin="1" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Text, UpdateSourceTrigger=PropertyChanged}" 
+                                 BorderThickness="0"
+                                 VerticalContentAlignment="Center"
+                                 TextWrapping="Wrap"
+                                 Background="{TemplateBinding Background}"
+                                 AcceptsReturn="True"
+                                 AcceptsTab="True"
+                                 MaxLines="4"
+                                 VerticalScrollBarVisibility="Auto"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
