--- a/ChatClient/MainWindow.xaml
+++ b/ChatClient/MainWindow.xaml
@@ -21,6 +21,9 @@
             <DataTemplate DataType="{x:Type viewModels:RegistrationViewModel}">
                 <views:RegistrationView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModels:BanViewModel}">
+                <views:BanView/>
+            </DataTemplate>
         </ContentControl.Resources>
     </ContentControl>
 </Window>
