--- a/ChatClient/Resources/Button.xaml
+++ b/ChatClient/Resources/Button.xaml
@@ -26,6 +26,12 @@
         <GradientStop Color="#C5C4C2" Offset="1"/>
     </LinearGradientBrush>
 
+    <LinearGradientBrush x:Key="reconnectionIsDisabledColors" StartPoint="0.5,0" EndPoint="0.5,1">
+        <GradientStop Color="#F2F0E9" Offset="0"/>
+        <GradientStop Color="#DAD6CC" Offset="0.7"/>
+        <GradientStop Color="#DAD6CC" Offset="1"/>
+    </LinearGradientBrush>
+
     <Style x:Key="submitButton" TargetType="{x:Type Button}">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontSize" Value="22"/>
@@ -156,6 +162,30 @@
 
     <Style x:Key="reconnectionButton" TargetType="{x:Type Button}" BasedOn="{StaticResource submitButton}">
         <Setter Property="Template" Value="{StaticResource authorizationControlTemplate}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="insideBorder" BorderBrush="#6D4F02" Background="{StaticResource registrationBasicColors}" 
+                            BorderThickness="1.3" 
+                            CornerRadius="5"
+                            Margin="{TemplateBinding Padding}">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="insideBorder" Property="Background" Value="{StaticResource registrationMouseOverColors}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="insideBorder" Property="Background" Value="{StaticResource reconnectionIsDisabledColors}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="insideBorder" Property="Background" Value="{StaticResource registrationIsPressedColors}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Style.Triggers>
             <DataTrigger Binding="{Binding IsLoading}" Value="True">
                 <Setter Property="IsEnabled" Value="False"/>
@@ -203,10 +233,6 @@
                             Name="toolBarBorder"
                             Background="{StaticResource registrationBasicColors}"
                             Margin="0,2,0,2">
-                        <!--<Button BorderThickness="0" 
-                                Content="{TemplateBinding Content}"
-                                Background="Transparent"
-                                FontWeight="DemiBold"/>-->
                         <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center"/>
                     </Border>
