--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -53,4 +53,18 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="getBan" TargetType="{x:Type Grid}">
+        <Setter Property="Panel.ZIndex" Value="3"/>
+        <Setter Property="Visibility" Value="Visible"/>
+        <Setter Property="Background" Value="#F1F0EA"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding ConnectionStatusValue}" Value="Reconnecting">
+                <Setter Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding ConnectionStatusValue}" Value="Disconnected">
+                <Setter Property="Visibility" Value="Visible"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
 </ResourceDictionary>
