--- a/ChatClient/Views/BanView.xaml
+++ b/ChatClient/Views/BanView.xaml
@@ -1,25 +1,22 @@
-﻿<UserControl x:Class="ChatClient.Views.AdditionalViews.ConnectionLostView"
+﻿<UserControl x:Class="ChatClient.Views.BanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views" 
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
-             d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
+             xmlns:local="clr-namespace:ChatClient.Views" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:BanViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
-        <Grid Style="{StaticResource connectionLost}">
-        <Border Style="{StaticResource formBorder}"
-                Width="Auto"
-                Height="Auto">
+    <Grid Background="White">
+        <Border Style="{StaticResource notPermanentBan}"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.3*"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Connection Lost"
+                <TextBlock Text="You were banned"
                                               Grid.Row="0"
                            Style="{StaticResource redTitle}"/>
                 <StackPanel Orientation="Vertical" 
@@ -30,18 +27,31 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Margin="5,5,5,20">
-                        <TextBlock Text="Connection status: "
+                        <TextBlock Text="Ban remaining time: "
                            FontSize="24"/>
-                        <TextBlock Text="{Binding ConnectionStatusValue}"
+                        <TextBlock Text="{Binding RemainingTime}"
                        FontSize="20"
                            Margin="5"
                                    Foreground="Blue"/>
                     </StackPanel>
                     <Button Style="{StaticResource reconnectionButton}"
-                    Content="Reconnect"
-                            Command="{Binding ReconnectionCommand}">
+                            IsEnabled="{Binding IsEnabled}"
+                    Content="Reconnect" 
+                            Command="{Binding ReconnectionCommand}"
+                            CommandParameter="{Binding BanStatus}">
                     </Button>
                 </StackPanel>
+            </Grid>
+        </Border>
+
+        <Border Style="{StaticResource permanentBan}"
+                Panel.ZIndex="2">
+            <Grid HorizontalAlignment="Center"
+                  VerticalAlignment="Center">
+                <TextBlock Text="You were banned Forever"
+                                              Grid.Row="0"
+                           Style="{StaticResource redTitle}"
+                           FontSize="32"/>
             </Grid>
         </Border>
     </Grid>
