--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -1,7 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:ChatClient.Converters"
-                    xmlns:extensions="clr-namespace:ChatClient.Extensions">
+                    xmlns:extensions="clr-namespace:ChatClient.Extensions"
+                    xmlns:viemodels="clr-namespace:ChatClient.ViewModels">
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/Mute.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    <!--<ResourceDictionary x:Key="iconsDictionary">
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary x:Name="iconMute" Source="pack://application:,,,/ChatClient;component/Resources/Images/Mute.xaml"/>
+        </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>-->
 
     <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
 
@@ -14,7 +24,7 @@
         <GradientStop Color="#E6E7FF" Offset="1"/>
     </LinearGradientBrush>
 
-    <Style x:Key="usersBox" x:Name="usersListBox" TargetType="{x:Type ListBox}">
+    <Style x:Key="usersListBox" x:Name="usersListBox" TargetType="{x:Type ListBox}">
         <Setter Property="ItemsSource" Value="{Binding ActiveUsers}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -38,10 +48,16 @@
                                     Background="CornflowerBlue" 
                                     Width="30" 
                                     Height="30"/>
+                        <Image Source="{StaticResource muteDrawingImage}" 
+                               Width="15" 
+                               Height="15"
+                               Margin="5,10,-5,5"
+                               Visibility="Collapsed"
+                               Name="muteImage"/>
                         <StackPanel>
                             <TextBlock Text="{Binding Username}"
                                        Foreground="{Binding UsernameColor}"
-                                       Margin="10,0,10,0"
+                                       Margin="10,-5,10,0"
                                        FontSize="22"/>
                             <TextBlock Text="{Binding StatusMessage}"
                                    Margin="10,-5,10,0"
@@ -51,12 +67,17 @@
                                        FontWeight="SemiBold"/>
                         </StackPanel>
                     </StackPanel>
+                    <DataTemplate.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.MuteStatus.IsMuted}" Value="True">
+                            <Setter Property="Visibility" TargetName="muteImage" Value="Visible"/>
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
                 </DataTemplate>
             </Setter.Value>
         </Setter>
     </Style>
     
-    <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersBox}">
+    <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersListBox}">
         <Setter Property="ItemsSource" Value="{Binding Messages}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
         <Setter Property="ItemTemplate">
